# yahoo-mail-mcp

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: config.toml
src/yahoo_mail_mcp/: __init__.py  config.py  folders.py  imap_client.py  server.py
tests/: test_bulk_purge.py  test_config.py  test_fetch.py  test_folders.py  test_imap_client.py  test_live.py  test_live_writes.py  test_search.py  test_smoke.py  test_writes.py
