[project]
name = "yahoo-mail-mcp"
version = "0.0.0"
description = "MCP server for triaging a Yahoo Mail mailbox over IMAP (read, search, move, delete, mark-read, bulk-purge-from-sender)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "yahoo-mail-mcp contributors" },
]
keywords = ["mcp", "yahoo", "yahoo-mail", "imap", "email", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "imap-tools>=1.5.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
yahoo-mail-mcp = "yahoo_mail_mcp.server:main"

[project.urls]
Homepage = "https://github.com/acato/yahoo-mail-mcp"
Repository = "https://github.com/acato/yahoo-mail-mcp"
Issues = "https://github.com/acato/yahoo-mail-mcp/issues"
Documentation = "https://github.com/acato/yahoo-mail-mcp/blob/main/DESIGN.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_mail_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.lint.isort]
known-first-party = ["yahoo_mail_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src/yahoo_mail_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
